--- a/CPOA_Voicela/nbproject/project.properties
+++ b/CPOA_Voicela/nbproject/project.properties
@@ -3,6 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.splash=C:\\Users\\Guillaume\\Pictures\\splash.jpg
 application.title=CPOA_Voicela
 application.vendor=Guillaume
 build.classes.dir=${build.dir}/classes
@@ -29,9 +30,11 @@ dist.jar=${dist.dir}/CPOA_Voicela.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ojdbc14.jar=ojdbc14.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=IHM.MainScreen
+main.class=appli.Appli
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
