--- a/CPOA_Voicela/nbproject/project.properties
+++ b/CPOA_Voicela/nbproject/project.properties
@@ -34,7 +34,8 @@ file.reference.ojdbc14.jar=ojdbc14.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc14.jar}
+    ${file.reference.ojdbc14.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
