--- a/CPOA_Voicela/nbproject/project.properties
+++ b/CPOA_Voicela/nbproject/project.properties
@@ -30,12 +30,13 @@ dist.jar=${dist.dir}/CPOA_Voicela.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc14.jar=ojdbc14.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc14.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${reference.TPJTableMysql.jar}:\
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,6 +66,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.TPJTableMysql=../../G6S3/CPOA/TPJTableMysql
+reference.TPJTableMysql.jar=${project.TPJTableMysql}/dist/TPJTableMysql.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
