--- a/CPOA_Voicela/nbproject/project.properties
+++ b/CPOA_Voicela/nbproject/project.properties
@@ -30,13 +30,17 @@ dist.jar=${dist.dir}/CPOA_Voicela.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ftp4j-1.7.2.jar=C:\\Users\\Guillaume\\Downloads\\ftp4j-1.7.2\\ftp4j-1.7.2\\ftp4j-1.7.2.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Guillaume\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${reference.TPJTableMysql.jar}:\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.ftp4j-1.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
